# DMXP-Protobuf-Plugin

./: Cargo.toml  README.md  test.proto
src/: lib.rs  main.rs
src/ast/: ast.rs  mod.rs  structs.rs
src/parser/: helpers.rs  mod.rs  parse.rs  parser.rs
src/templateGen/: go_generator.rs  mod.rs  rust_generator.rs  template_generator.rs
src/utils/: LoadFile.rs  mod.rs
tests/: parser_test.rs
