[package]
name = "DMXP-Protobuf-Plugin"
version = "0.1.0"
edition = "2024"
description = "DMXP Protobuf Plugin - Code generation tool for DMXP (Direct Message Exchange Protocol)"
authors = ["DMXP Team"]
license = "MIT"
repository = "https://github.com/dmxp/protoc-gen-dmxp"

[[bin]]
name = "protoc-gen-dmxp"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tempfile = "3.8"
